# stock_market

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yml
src/: app.py  dashboard.py  login.py  main.py  utils.py
src/assets/: style.css
src/edinet_company_list/: EdinetcodeDlInfo.csv  FundcodeDlInfo.csv  company_list.parquet
terraform/: .terraform.tfstate.lock.info  main.tf  variables.tf
