[project]
name = "workspace"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuji-github",email = "81yishikawa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
